src/test/ui/type-alias-impl-trait/different_defining_uses.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses.rs:12:1
   |
LL | fn bar() -> Foo {
   | ^^^^^^^^^^^^^^^ expected `&'static str`, got `i32`
   |
note: previous use here
  --> $DIR/different_defining_uses.rs:8:1
   |
LL | fn foo() -> Foo {
   | ^^^^^^^^^^^^^^^

error: aborting due to previous error

